--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
     "name": "@maomrs/tiny",
-    "version":"1.0.0"
+    "version": "1.0.2",
+    "description": "Removes all spaces from a string",
+    "license": "MIT",
+    "repository": "maomrs/tiny",
+    "main": "index.js",
+    "keywords": [
+      "tiny",
+      "npm",
+      "package",
+      "maomrs"
+    ]
 }
